
  - Added 'operator' attribute to CMFTopic.ListCriterion, to permit
    specifying an operator ('and', for the most part) for indexes which
    support it, e.g., KeywordIndex (Tracker #442).

  - Added ZMI interface for editing Link URL (Tracker #364).

  - (__future__) Added DCWorkflow (through-the-web configurable
      workflows) to the core set of CMF products.

Bugs Fixed

  - Fixed typo in zpt_stylesheet.css. Thanks to Florent Guillaume
    for the patch. (Tracker #461)

  - Fixed long standing bug in FSPythonScript where get_size returned
    the incorrect length. This broke editing using EMACS via FTP or
    WebDAV. Thanks to John Glavin at South River Technologies for
    help finding the bug.

  - Reworked functionality added in Tracker #409 which broke the 
    Types Tool. (Tracker #458)

  - Fixed bug whereby DirectoryView instances were not noticing
    some of the changes they should when Zope was running in debug mode
    on Windows (Tracker #305)

  - Fixed a bug where the workflow notifyCreated method was called during
    manage_afterAdd in PortalContent, making it possible for the
    notification to occur on the wrong workflow.  The notification has 
    moved to the contstructInstance method on the TypesTool after
    the _setPortalTypeName method has been called on the object.

  - Extended TypesTool to permit registration of new TypeInformation
    implementations (Tracker #409, thanks to Jeffrey Shell for the
    work!)

  - Fixed a bug in Favorites.getObject to use restrictedTraverse on the portal
    object.

  - Made all tool-generated actions configurable through-the-web,
    via an "Actions" tab on each tool;  made the list of ActionProviders
    configurable TTW as well.

  - Fixed setting the Link.format to URL_FORMAT so the initially returned
    metadata headers would return 'text/url' properly.  Added unittests.

  - Enabled querying actions from workflow tool in absence
    of actions tool (Tracker #401).
